--- a/frontend/src/styles/icons/demo.html
+++ b/frontend/src/styles/icons/demo.html
@@ -15,10 +15,10 @@
         <h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-reaction">
-                <span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span><span class="path6"></span>
+                <span class="icon-dna">
+                
                 </span>
-                <span class="mls"> icon-reaction</span>
+                <span class="mls"> icon-dna</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e907" class="unit size1of2" />
